; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_parser.c_decode_url.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_parser.c_decode_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @decode_url to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @decode_url(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %8, %1
  store i8* null, i8** %2, align 8
  br label %31

14:                                               ; preds = %8
  %15 = load i8*, i8** %3, align 8
  %16 = call i8* @xstrdup(i8* %15)
  store i8* %16, i8** %5, align 8
  store i8* %16, i8** %4, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @decode_hex(i8* %17, i8* %18)
  %20 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %14
  %23 = load i8*, i8** %5, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 @decode_hex(i8* %23, i8* %24)
  br label %26

26:                                               ; preds = %22, %14
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @strip_newlines(i8* %27)
  %29 = load i8*, i8** %4, align 8
  %30 = call i8* @trim_str(i8* %29)
  store i8* %30, i8** %2, align 8
  br label %31

31:                                               ; preds = %26, %13
  %32 = load i8*, i8** %2, align 8
  ret i8* %32
}

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i32 @decode_hex(i8*, i8*) #1

declare dso_local i32 @strip_newlines(i8*) #1

declare dso_local i8* @trim_str(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
